force-app/main/default/objects/Interaction_event_mapping__c/Interaction_event_mapping__c.object-meta.xml
<CustomObject>
    <label>Interaction event mapping</label>
    <nameField>
        <displayFormat>IEM-{0000}</displayFormat>
        <label>Interaction event mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interaction event mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>