force-app/main/default/objects/Interaction_event_mapping__c/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Template</label>
    <referenceTo>Email_Template__c</referenceTo>
    <relationshipLabel>Interaction event mappings</relationshipLabel>
    <relationshipName>Interaction_event_mappings</relationshipName>
    <type>Lookup</type>
</CustomField>