force-app/main/default/objects/Interaction_event_mapping__c/validationRules/Validation_for_ActionName_URl_Tamplate.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_ActionName_URl_Tamplate</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISCHANGED( Action_Name__c ) , ISCHANGED( Email_Template__c ) , ISCHANGED( URL__c ))</errorConditionFormula>
    <errorMessage>Email template, Action Name, and URL cannot be updated</errorMessage>
</ValidationRule>