force-app/main/default/objects/Interaction_event_mapping__c/validationRules/Weightage_should_be_greater_than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Weightage_should_be_greater_than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Weightage__c &lt; 0</errorConditionFormula>
    <errorMessage>Weightage of the email template should be always greater or equal to 0</errorMessage>
</ValidationRule>